...
        <string name="google_project_number">143096327367</string>

        <!--BugSense-->
        <string name="bug_sense_key"></string>


    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="loading">Loading&#8230;</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="add_users">Add Users</string>
    <string name="start_chat">Start Chat</string>
    <string name="contacts_upper_case">CONTACTS</string>
    <string name="select_all">Select All</string>
    <string name="send_location">Send this location</string>
    <string name="search_upper_case">SEARCH</string>
    <string name="send">Send</string>
    <string name="pick_friends">Pick Friends</string>

    <!--ThreadDetails activity-->
    <string name="thread_details_activity_title">Thread Details</string>
    <string name="thread_details_activity_change_name_dialog_title">Set thread name</string>

...
