<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.braunster.chatsdk.fragments.ChatSDKThreadsFragment">
    <item android:id="@+id/action_chat_sdk_add"
        android:title="@string/action_add_chat"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10" />


    <item android:id="@+id/action_chat_sdk_show"
        android:title="@string/action_add_chat"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="11" />

    <item android:id="@+id/action_chat_sdk_logout"
        android:title="@string/action_logout"
        android:orderInCategory="12" />

    <item android:id="@+id/action_chat_sdk_edit"
        android:title="@string/action_edit"
        android:orderInCategory="13" />

    <item android:id="@+id/action_chat_sdk_thread_details"
        android:title="@string/action_add_chat"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10" />

    <item android:id="@+id/add_course"
        android:title="Add Course"
        android:orderInCategory="15" />
</menu>